tests/negative/test_expr_inc_on_cn.orb
fnc main() {
    let i32 cn x = 100;
    ++x;
}